  * Cleaned up the setup.py script to uses NumPy's internal facilities to identify ATLAS
  * Updated the list of dependencies to include pytz
  * Added the 'iauConvention' keyword to the lsl.misc.beamformer.circularize() function
  * Added a few new convenience functions to the lsl.reader.drspec module
  * Added 'lwavl' as an alias to 'lwa1' in the lsl.common.stations module

1.0.0
  * Added in LWA Development Primitives module (lsl.reader.ldp)
  * Added a function to lsl.misc.beamformer to convert X and Y linear pols. to circular L and R pols
  * Removed the lsl.correlator.visUtils module since it isn't used by any other modules or scripts
  * Switched the lsl.correlator modules over to returned all 'LFFT' channels
  * Replaced the Fermi first point source catalog with the 2-year catalog
  * Dropped libnova in favor of PyEphem for the backend to the lsl.astro module
  * Modified skymap.ProjectedSkyMap to not rely on the lsl.astro_array module
  * Removed the lsl.astro_array module
  * Removed the lsl.libnova module and the associated swig file
  * Updated the documentation to reflect the reduced dependencies
  * Update lsl.common.stations.LWAStation to be a sub-class to ephem.Observer
  * Added a function to lsl.common.stations.Antenna to access information about the impedence mis-match
  * Added an option to the various response functions in lsl.common.stations to return values in dB
  * Switch the information/SSMIF for the north arm site to lwana instead of lwa2 to avoid confusion with the SV site
  * Renamed the lsl.common.stations.LWAStation.getECEFTransform() function to getECITransform() to reflect what is really happening
  * Added a function to lsl.imaging.utils to make it easy to re-phase a data dictionary to a new pointing center
  * Added new functions to the LWAStation class to deal with direction and distance to other stations/points on the Earth
  * Generalized the computeUVW() and computeUVTrack() functions