@@ -1,0 +1,30 @@
+10.83	35.890
+12.44	35.938
+15.14	35.965
+19.47	35.960
+23.26	35.917
+26.78	35.879
+30.84	35.841
+34.36	35.809
+37.07	35.782
+40.32	35.733
+42.76	35.701
+46.55	35.658
+49.53	35.631
+53.32	35.577
+57.65	35.544
+62.25	35.512
+66.31	35.485
+70.64	35.437
+74.44	35.366
+78.23	35.312
+80.67	35.253
+84.47	35.194
+87.72	35.134
+90.98	35.070
+94.50	35.005
+98.03	34.940
+99.93	34.892
+102.9	34.816
+105.9	34.751
+109.7	34.665
