@@ -33,6 +33,7 @@
   * Added the 'iauConvention' keyword to the lsl.misc.beamformer.circularize() function
   * Added a few new convenience functions to the lsl.reader.drspec module
   * Added 'lwavl' as an alias to 'lwa1' in the lsl.common.stations module
+  * Added methods to return the response curves of the FEE and Cable to the lsl.common.stations module
 
 1.0.0
   * Added in LWA Development Primitives module (lsl.reader.ldp)
